--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
         height: 53vw;
       }
       #union{
+        padding: 1vw;
         grid-row: span 7;
         background-color: #3C3B6E;
         display: grid;
-        grid-template-columns: 1fr repeat(11, 3fr) 1fr;
-        grid-template-rows: 2fr repeat(9, 3fr) 2fr;
+        grid-template-columns: repeat(11, 3fr);
+        grid-template-rows: repeat(9, 3fr);
         place-items: center center;
-      }
-      #union > :first-child, #union > :last-child{
-        grid-column: 1 / -1;
       }
       .stripe:nth-child(even){
         background-color: #B22234;
@@ -57,17 +55,15 @@
     </div>
     <script>
       document.getElementById('union').innerHTML = [
-        ' ',
-        ' ','★',' ','★',' ','★',' ','★',' ','★',' ','★',' ',
-        ' ',' ','★',' ','★',' ','★',' ','★',' ','★',' ',' ',
-        ' ','★',' ','★',' ','★',' ','★',' ','★',' ','★',' ',
-        ' ',' ','★',' ','★',' ','★',' ','★',' ','★',' ',' ',
-        ' ','★',' ','★',' ','★',' ','★',' ','★',' ','★',' ',
-        ' ',' ','★',' ','★',' ','★',' ','★',' ','★',' ',' ',
-        ' ','★',' ','★',' ','★',' ','★',' ','★',' ','★',' ',
-        ' ',' ','★',' ','★',' ','★',' ','★',' ','★',' ',' ',
-        ' ','★',' ','★',' ','★',' ','★',' ','★',' ','★',' ',
-        ' '
+        '★',' ','★',' ','★',' ','★',' ','★',' ','★',
+        ' ','★',' ','★',' ','★',' ','★',' ','★',' ',
+        '★',' ','★',' ','★',' ','★',' ','★',' ','★',
+        ' ','★',' ','★',' ','★',' ','★',' ','★',' ',
+        '★',' ','★',' ','★',' ','★',' ','★',' ','★',
+        ' ','★',' ','★',' ','★',' ','★',' ','★',' ',
+        '★',' ','★',' ','★',' ','★',' ','★',' ','★',
+        ' ','★',' ','★',' ','★',' ','★',' ','★',' ',
+        '★',' ','★',' ','★',' ','★',' ','★',' ','★'
       ].map(char => `<span>${char}</span>`).join('')
     </script>
   </body>
