--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
       #flag{
         display: grid;
-        grid-template-columns: 40% 1fr;
+        grid-template-columns: 2fr 3fr;
         grid-template-rows: repeat(13, 1fr);
         width: 100vw;
         height: 53vw;
@@ -21,8 +21,8 @@
         grid-row: span 7;
         background-color: #3C3B6E;
         display: grid;
-        grid-template-columns: repeat(11, 3fr);
-        grid-template-rows: repeat(9, 3fr);
+        grid-template-columns: repeat(11, 1fr);
+        grid-template-rows: repeat(9, 1fr);
         place-items: center center;
       }
       .stripe:nth-child(even){
