Added Flag of Ireland

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
         grid-template-columns: 2fr 3fr;
         grid-template-rows: repeat(13, 1fr);
       }
+      #ireland{
+        height: 50vw;
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+      .ireland-stripe:nth-child(1){
+        background-color:#169B62;
+      }
+      .ireland-stripe:nth-child(2){
+        background-color:#FFFFFF;
+      }
+      .ireland-stripe:nth-child(3){
+        background-color:#FF883E;
+      }
       #france{
         height: 67vw;
         grid-template-columns: 1fr 1fr 1fr;
@@ -100,6 +113,11 @@
     </style>
   </head>
   <body>
+    <div class='flag' id='ireland'>
+      <div class='ireland-stripe'></div>
+      <div class='ireland-stripe'></div>
+      <div class='ireland-stripe'></div>
+    </div>
     <div class='flag' id='france'>
       <div class='france-stripe'></div>
       <div class='france-stripe'></div>
