added Irish flag

--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
       .usa-stripe:nth-child(odd){
         background-color: #FFFFFF;
       }
+      #ireland{
+        height: 67vw;
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+      .ireland-stripe:nth-child(1){
+        background-color:#4C9C62;
+      }
+      .ireland-stripe:nth-child(2){
+        background-color:#FFFFFF;
+      }
+      .ireland-stripe:nth-child(3){
+        background-color:#E9863F;
+      }
     </style>
   </head>
   <body>
@@ -149,6 +162,11 @@
       <div class='usa-stripe stripe-full'></div>
       <div class='usa-stripe stripe-full'></div>
       <div class='usa-stripe stripe-full'></div>
+      <div class='flag' id='ireland'>
+        <div class='ireland-stripe'></div>
+        <div class='ireland-stripe'></div>
+        <div class='ireland-stripe'></div>
+      </div>
     </div>
   </body>
 </html>
